logueo de usuario con prompt

--- a/index.html
+++ b/index.html
@@ -10,39 +10,16 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title>PRE-ENTREGA 1</title>
+    <title >PRE-ENTREGA 1</title>
   </head>
 
   <body class="bg-secondary">
-    <h1 class="H1 m-5 text-center text-capitalize" id="tituloH1">
-      ejercitando con funciones
-    </h1>
-    <div id="contIteracion" class="border m-3 p-3 text-center bg-gradient">
-      <input
-        onchange="convertir()"
-        type="text"
-        placeholder="introducir un numero"
-        class="m-2"
-        id="ingreso"
-      />
-      <label class="m-2">EJERCICIO CONDICIONAL</label>
-      <button id="b1" class="btn btn-dark">boton</button>
-      <div class="border m-3 p-3 text-center bg-gradient" id="par">
-        NUMEROS PARES:
-      </div>
-      <div class="border m-3 p-3 text-center bg-gradient" id="impar">
-        NUMEROS IMPARES:
-      </div>
+    <h1 class="h1 m-3 p-3 border text-center">Pre-Entrega 1</h1>
+    <div class="m-3 p-3 border">
+      <h2 class="h2 m-3 p-3">tus datos registrados son los siguientes</h2>
+      <p id="nombre m-3 p-3">nombre completo</p>
+      <p id="user m-3 p-3">usuario</p>
     </div>
-    <div id="divResultado" class="border m-3 p-3 bg-gradient">
-      <button class="btn btn-dark m-3">resultado</button>
-      <h3 id="result" class="h3">la suma es:</h3>
-    </div>
-    <div id="relleno" class="border m-3 p-3 bg-gradient">
-      <button class="btn btn-dark m-3">resetear</button>
-      <h3 id="vacio" class="h3">esto se va a rellenar</h3>
-    </div>
-
     <script src="app.js"></script>
   </body>
 </html>
