listo para branch de entrega

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <h1 class="h1 m-3 p-3 border text-center">Pre-Entrega 1</h1>
     <div class="m-3 p-3 border">
       <h2 class="h2 m-3 p-3">tus datos registrados son los siguientes</h2>
-      <p id="nombre m-5 p-5">nombre completo</p>
-      <p id="user m-5 p-5">usuario</p>
+      <p id="nombre" class="m-2 p-2 border">nombre completo</p>
+      <p id="user" class="m-2 p-2 border">usuario</p>
+      <p id="mail" class="m-2 p-2 border">mail</p>
     </div>
+    <button class="m-3 p-1 btn-primary border"onclick="modificarTexto()">mostrar</button>
     <script src="app.js"></script>
   </body>
 </html>
