retoques con bootstrap

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
   <body class="bg-secondary">
     <h1 class="h1 m-3 p-3 border text-center">Pre-Entrega 1</h1>
-    <div class="m-3 p-3 border">
+    <div class="m-3 p-3 border bg-info">
       <h2 class="h2 m-3 p-3">tus datos registrados son los siguientes</h2>
-      <p id="nombre" class="m-2 p-2 border">nombre completo</p>
-      <p id="user" class="m-2 p-2 border">usuario</p>
-      <p id="mail" class="m-2 p-2 border">mail</p>
+      <p id="nombre" class="m-2 p-2 border bg-light">nombre completo</p>
+      <p id="user" class="m-2 p-2 border bg-light">usuario</p>
+      <p id="mail" class="m-2 p-2 border bg-light">mail</p>
     </div>
     <button class="m-3 p-1 btn-primary border"onclick="modificarTexto()">mostrar</button>
     <script src="app.js"></script>
