--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title >PRE-ENTREGA 1</title>
+    <title>PRE-ENTREGA 2</title>
   </head>
 
   <body class="bg-secondary">
-    <h1 class="h1 m-3 p-3 border text-center">Pre-Entrega 1</h1>
+    <h1 class="h1 m-3 p-3 border text-center">Pre-Entrega 2</h1>
+    <p>actualizando el codigo...</p>
     <div class="m-3 p-3 border bg-info">
       <h2 class="h2 m-3 p-3">tus datos registrados son los siguientes</h2>
       <p id="nombre" class="m-2 p-2 border bg-light">nombre completo</p>
       <p id="user" class="m-2 p-2 border bg-light">usuario</p>
       <p id="mail" class="m-2 p-2 border bg-light">mail</p>
     </div>
-    <button class="m-3 p-1 btn-primary border"onclick="modificarTexto()">mostrar</button>
+    <button class="m-3 p-1 btn-primary border" onclick="modificarTexto()">
+      mostrar
+    </button>
     <script src="app.js"></script>
   </body>
 </html>
