testeando ejercicios de clase de la profe

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
         <label for="edad">edad</label>
         <input type="text" />
       </form>
-      <button class="btn bg-info border-3" onclick="miFrom()">
+      <button class="btn bg-info border-3">
         mostrar
       </button>
       <div><p  class="m-3 p-3 border-4"></p id="vacio"></div>
+    </section>
+    <section class="contenedor2">
+
     </section>
     <script src="app.js"></script>
   </body>
