--- a/tareas para clases en vivo/index.html
+++ b/tareas para clases en vivo/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>html para ejercicios en clase</title>
   </head>
   <body>
-    <h1>ejercitandome en clase de coderhouse</h1>
-    <script src="../tareas para clases en vivo/29.11.2022.js"></script>
+    <div class="container"></div>
+
+    <script src="pokemon.js"></script>
+    <script src="tarjetas.js"></script>
   </body>
 </html>
