aplicando descuentos a los objetos con descuento true

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
 
   <body class="bg-secondary h2 text-center">
-    <h1 class="h1 m-3 p-3 border text-center opacity-75">Pre-Entrega 2</h1>
+    <h1 class="h1 m-2 p-2 border text-center opacity-75">Pre-Entrega 2</h1>
     
-    <button class="m-3 p-2 btn bg-info border-3" onclick="interaccion1()">INPUTS</button>
-    <div class="m-3 p-3 border bg-info border-3">
-      <h2 class="h2 m-3 p-3 text-center">
+    <button class="m-2 p-2 btn bg-info border-3" onclick="interaccion1()">REGISTRARME</button>
+    <div class="m-2 p-2 border bg-info border-3">
+      <h2 class="h2 m-2 p-2 text-center">
         tus datos registrados son los siguientes
       </h2>
       <p id="nombre" class="m-2 p-2 border bg-light">nombre completo</p>
@@ -26,6 +26,15 @@
       <p id="mail" class="m-2 p-2 border bg-light">mail</p>
     </div>
     
+
+    <button class="btn bg-info border-3" onclick="ofertas()">
+      productos con descuento (ver en consola xD)
+    </button>
+  </br>
+  </br>
+    <button class="btn bg-info border-3" onclick="ordenar()">
+      listar productos por Id.
+    </button>
     <section class="text-center w-85 bg-body"> 
       <select name="seleccionar un metodo">
         <option value="value1">filter</option>
