creando funciones con metodos

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
     </button>
   </br>
   </br>
+  <button class="btn bg-info border-3" onclick="busqueda()">
+    busqueda de producto
+  </button>
+</br>
+</br>
     <button class="btn bg-info border-3" onclick="ordenar()">
-      listar productos por Id.
+      cambiar el orden de productos listados
     </button>
     <section class="text-center w-85 bg-body"> 
       <select name="seleccionar un metodo">
