ultimas consignas de clase 15.12.2022

--- a/tareas para clases en vivo/index.html
+++ b/tareas para clases en vivo/index.html
@@ -8,9 +8,8 @@
     <title>html para ejercicios en clase</title>
   </head>
   <body>
-    <div class="container"></div>
+    <h1></h1>
 
-    <script src="pokemon.js"></script>
-    <script src="tarjetas.js"></script>
+    <script src="./15.12.2022.js"></script>
   </body>
 </html>
