preparando pre-entrega para coderhouse

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <label><input  id="usuario" type="text"for="usuario" placeholder="usuario"></label>
       <br>
       <br>
-      <label><input id="password" type="text"for="pass" placeholder="contraseña"></label>
+      <label><input id="password" type="password"for="pass" placeholder="contraseña"></label>
       <br>
       <br>
       <label><input id="ingresar"type="submit"></label>
@@ -45,7 +45,9 @@
     <button id="todasLasOfertas"class="btn bg-info border-3 m-2">
       productos con desc.
     </button>
-  </br>  
+  </br>
+  <br>
+  <label for="">BUSCAR<input id="search" type="text" placeholder="producto/precio"></label>
   <button id="busqueda" class="btn bg-info border-3 m-2">
     busqueda de prod.
   </button>
