--- a/pruebas/peliculas.html
+++ b/pruebas/peliculas.html
@@ -35,6 +35,9 @@
               <a class="nav-link" href="peliculas.html">Peliculas</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="productos.html">productos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="inicioSesion.html">Inicio de Sesion</a>
             </li>
             <li class="nav-item">
