revisando bugs y correcciones

--- a/productos.html
+++ b/productos.html
@@ -81,7 +81,7 @@
               </select>
               <br><br>
                 <label>
-                    <input type="submit">
+                    <input type="submit" value="incorporar producto">
                 </label>
             </form>
             <div>
