--- a/peliculas.html
+++ b/peliculas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>INICIO</title>
+    <title>axios</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,55 +47,40 @@
         </div>
       </div>
     </nav>
-    <main class="m-3 text-center">
-      <h1 class="h1 text-center">Registrate en nuestro sitio</h1>
-      <form id="formulario" class="m-2">
-        <label>
-            nombre<input type="text" id="nombre" placeholder="coloque su nombre">
-        </label>
-        <br><br>
-        <label>
-            apellido<input type="text" id="apellido" placeholder="coloque su apellido">
-        </label>
-        <br><br>
-        <label>
-            contraseña<input type="password" id="password" placeholder="contraseña">
-        </label>
-        <br><br>
-        <label>
-          edad<input type="text" id="edad" placeholder="edad">
-      </label>
-      <br><br>
-      <label>
-          email<input type="email" id="correo" placeholder="correo electronico">
-      </label>
-      <br><br>
-        <label>
-            <input type="submit">
-        </label>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+    <form id="formPelis"class="m-1 p-1 text-center">
+      <h1 class="h1 text-center mb-3">Personajes STAR WARS</h1>
+      <h2 class="h2">Experimentando con la libreria Axios para peticiones http</h2>
+      <div class="text-center m-3">
+        <input 
+        type="text" 
+        placeholder="Coloca ID personaje " 
+        name="consulta">        
+      </div>
+      <div>
+        <button 
+        id="btnBuscar"
+        class="btn btn-primary m-3">BUSCAR</button>
+      </div>
+      <div 
+      class="text-center mt-3"><p 
+      id="envio"></p></div>
     </form>
-  
-    <form id="formulario2" class="m-5">
-        <label>
-            <input type="text" id="buscar" placeholder="coloque el ID de usuario">
-        </label>
-        <br><br>
-        <label>
-            <input type="submit" value="solo resultados por id existente">
-        </label>
-    </form>
-    <div > 
-      <p id="visualizaciones"></p>       
+    <div >
+      <p class="contenedor"></p>
     </div>
-    </main>
-    
-    
+</div>
+</div>
+</div>    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>       
-    <script src="app.js"></script>   
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>       
+    <script src="peliculas.js"></script>   
   </body>
 </html>
