--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>registro y busqeuda de usuarios</title>
+    <title>registro y busqueda de usuarios</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,9 +47,9 @@
         </div>
       </div>
     </nav>
-    <main class="m-3 text-center">
+    <main class="m-1 text-center">
       <h1 class="h1 text-center">Registrate en nuestro sitio</h1>
-      <form id="formulario" class="m-2">
+      <form id="formulario" class="m-1">
         <label>
             nombre<input type="text" id="nombre" placeholder="coloque su nombre">
         </label>
@@ -75,7 +75,7 @@
         </label>
     </form>
   
-    <form id="formulario2" class="m-5">
+    <form id="formulario2" class="m-1">
         <label>
             <input type="text" id="buscar" placeholder="coloque el ID de usuario">
         </label>
