modificando directorio, agregando funciones, adaptando UI

--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>registro y busqueda de usuarios</title>
+    <link rel="stylesheet" href="./styles.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,61 +30,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="inicio.html">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
+                       <li class="nav-item">
+              <a class="nav-link" href="items.html">Productos</a>
+            </li>           
             <li class="nav-item">
-              <a class="nav-link" href="peliculas.html">Peliculas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="busquedaProductos.html">Busqueda de productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registro.html">Registrarse</a>
+              <a class="nav-link" href="contacto.html">contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <main class="m-1 text-center">
-      <h1 class="h1 text-center">Registrate en nuestro sitio</h1>
-      <form id="formulario" class="m-1">
-        <label>
-            nombre<input type="text" id="nombre" placeholder="coloque su nombre">
-        </label>
-        <br><br>
-        <label>
-            apellido<input type="text" id="apellido" placeholder="coloque su apellido">
-        </label>
-        <br><br>
-        <label>
-            contraseña<input type="password" id="password" placeholder="contraseña">
-        </label>
-        <br><br>
-        <label>
-          edad<input type="text" id="edad" placeholder="edad">
-      </label>
-      <br><br>
-      <label>
-          email<input type="email" id="correo" placeholder="correo electronico">
-      </label>
-      <br><br>
-        <label>
-            <input type="submit">
-        </label>
-    </form>
-  
-    <form id="formulario2" class="m-1">
-        <label>
-            <input type="text" id="buscar" placeholder="coloque el ID de usuario">
-        </label>
-        <br><br>
-        <label>
-            <input type="submit" value="solo resultados por id existente">
-        </label>
-    </form>
+      <h1 class="h1 text-center">contacto</h1>
+      
     <div > 
       <p id="visualizaciones"></p>       
     </div>
