funcionalidad de busqueda de articulos  en pagina de inicio funcionando...

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     <main class="m-2 text-center">
       <h1 class="h1 text-center m-3">Bienvenido</h1>
       <h1 class="h2 text-center m-3">Mira nuestro catalogo de articulos</h2>
+        <div class="text-center my-4 py-4 px-5">
+          <div class="input-group mb-2 px-5">
+            <input type="text" class="form-control text-center inputBusquedaInicio" placeholder="ingresa tu producto aqui, y aguarda unos segundos por favor...">
+            <button class="btn btn-outline-secondary botonBusquedaInicio" type="button" id="button-addon2">Buscar</button>
+          </div>
+        </div>
+        
       <div class="contenedor">        
       </div>
           </main>
