--- a/contacto.html
+++ b/contacto.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
-            </li>
-                       <li class="nav-item">
-              <a class="nav-link" href="items.html">Productos</a>
-            </li>           
+              <a class="nav-link" href="index.html">Catalogo</a>
+            </li>            
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">contacto</a>
+              <a class="nav-link" href="items.html">Tienda de Productos</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
