--- a/items.html
+++ b/items.html
@@ -44,7 +44,7 @@
     </nav>
     <main class="m-2 text-center">
       <h1 class="h1 text-center m-3">Bienvenido a la Tienda</h1> 
-      <div class="contenidoCarrito m-2">
+      <div class="contenidoCarrito m-2 p-4">
 
       </div>     
         <div class="text-center my-4 py-4 px-5">
