--- a/items.html
+++ b/items.html
@@ -43,10 +43,10 @@
       </div>
     </nav>
     <main class="m-2 text-center">
-      <h1 class="h1 text-center m-3">Bienvenido a la Tienda</h1> 
-      <div class="contenidoCarrito m-2 p-4">
-
-      </div>     
+      <h1 class="h1 text-center m-3">Bienvenido a la Tienda</h1>          
+      <div>
+        <div class="contenidoCarrito m-1 p-1"></div>
+      </div>
         <div class="text-center my-4 py-4 px-5">
           <div class="input-group mb-2 px-5">
             <input type="text" class="form-control text-center inputCarrito" placeholder="ingresa tu producto aqui">
@@ -55,7 +55,9 @@
         </div>        
       <div class="contenedorCarrito">     
       </div>
-    </main>       
+    </main>
+    
+           
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
