--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="items.html">Tienda de Productos</a>
             </li>            
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="carrito.html">Carrito</a>
             </li>
           </ul>
         </div>
