trabajando con local storage

--- a/carrito.html
+++ b/carrito.html
@@ -43,9 +43,10 @@
       </div>
     </nav>
     <main class="m-1 text-center">
-      <h1 class="h1 text-center">aqui esta el listado de productos seleccionados</h1>
+      <h1 class="text-center m-3 p-3">Carrito</h1>
+      <h2 class="h1 text-center m-2 p-2">Aqui estan tus productos seleccionados</h2>
       <div>
-        <div class="contenidoCarrito m-1 p-1"></div>
+        <div class="contenido-carrito"></div>
       </div>
     </main>   
     
@@ -55,6 +56,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>       
-    <script src="app.js"></script>   
+    <script src="carrito.js"></script>  
   </body>
 </html>
