--- a/carrito.html
+++ b/carrito.html
@@ -43,6 +43,12 @@
       </div>
     </nav>
     <main class="m-1 text-center">
+      <div className="bg-green-400 w-14 m-1 p-3 rounded text-center">
+        <button type="botton" id="vaciar"class="btn btn-info p-2">
+          <h6>vaciar carrito</h6>
+          <img src="./cart.png" alt="vaciar carrito" width=30 />
+        </button>
+      </div>
       <h1 class="text-center m-3 p-3">Carrito</h1>
       <h2 class="h1 text-center m-2 p-2">Aqui estan tus productos seleccionados</h2>
       <div>
