--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Detalle de carrito</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,10 +31,10 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Catalogo</a>
-            </li>            
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="items.html">Tienda de Productos</a>
-            </li>            
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="carrito.html">Carrito</a>
             </li>
@@ -44,24 +44,26 @@
     </nav>
     <main class="m-1 text-center">
       <div className="bg-green-400 w-14 m-1 p-3 rounded text-center">
-        <button type="botton" id="vaciar"class="btn btn-info p-2">
+        <button type="botton" id="vaciar" class="btn btn-info p-2">
           <h6>vaciar carrito</h6>
-          <img src="./cart.png" alt="vaciar carrito" width=30 />
+          <img src="./cart.png" alt="vaciar carrito" width="30" />
         </button>
       </div>
       <h1 class="text-center m-3 p-3">Carrito</h1>
-      <h2 class="h1 text-center m-2 p-2">Aqui estan tus productos seleccionados</h2>
+      <h2 class="h1 text-center m-2 p-2">
+        Aqui estan tus productos seleccionados
+      </h2>
       <div>
         <div class="contenido-carrito"></div>
       </div>
-    </main>   
-    
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>       
-    <script src="carrito.js"></script>  
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="carrito.js"></script>
   </body>
 </html>
