--- a/items.html
+++ b/items.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>carrito de compras</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,10 +31,10 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Catalogo</a>
-            </li>            
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="items.html">Tienda de Productos</a>
-            </li>            
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="carrito.html">Carrito</a>
             </li>
@@ -43,18 +43,27 @@
       </div>
     </nav>
     <main class="m-2 text-center">
-      <h1 class="h1 text-center m-3">Bienvenido a la Tienda</h1>          
-      
-        <div class="text-center my-4 py-4 px-5">
-          <div class="input-group mb-2 px-5">
-            <input type="text" class="form-control text-center inputCarrito" placeholder="ingresa tu producto aqui">
-            <button class="btn btn-outline-secondary botonBusquedaCarrito" type="button" id="button-addon2">Buscar</button>
-          </div>
-        </div>        
-      <div class="contenedorCarrito">     
+      <h1 class="h1 text-center m-3">Bienvenido a la Tienda</h1>
+
+      <div class="text-center my-4 py-4 px-5">
+        <div class="input-group mb-2 px-5">
+          <input
+            type="text"
+            class="form-control text-center inputCarrito"
+            placeholder="ingresa tu producto aqui"
+          />
+          <button
+            class="btn btn-outline-secondary botonBusquedaCarrito"
+            type="button"
+            id="button-addon2"
+          >
+            Buscar
+          </button>
+        </div>
       </div>
-    </main>   
-           
+      <div class="contenedorCarrito"></div>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
